--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 .special{
     font-size: 50px;
     color: orange;
+}
+.link-button{
+    background-image: linear-gradient(orange,tomato);
+    text-decoration: none;
+    border-radius: 10px;
+    margin: auto;
+    padding: 10px 40px;
+    color: white;
+    font-weight: 700;
+
+}
+.top-banner{
+    background-image:url(top.png);
+    background-repeat: no-repeat;
 }
 h1{
     font-size: 50px;
@@ -13,7 +28,8 @@ section{
 }
 .half-width{
     width: 50%;
+    padding-left: 5%;
 }
 .half-width img{
-    width: 100%;
+    width: 90%;
 }
