--- a/style.css
+++ b/style.css
@@ -23,7 +23,10 @@ body{
 h1{
     font-size: 50px;
 }
-section{
+h2{
+    font-size: 40px;
+}
+.flexible-container{
     display: flex;
     margin-bottom: 150px;
 }
@@ -49,4 +52,34 @@ section{
     color: white;
     font-weight: 700;
 
+}
+.experience{
+    background-image: url(bg2.png);
+    background-repeat:no-repeat;
+    background-position: left;
+}
+.experience h3{
+    color: orange;
+}
+.experience-item{
+    box-shadow: 10px 10px 40px gray;
+    width: 80%;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-left: 15px;
+    border-radius: 10px;
+    border-left: 7px solid;
+    border-image: linear-gradient(salmon, red
+    );
+    border-image-slice: 1;
+    
+}
+#web-developer{
+    border-left: 7px solid ;
+    border-image: linear-gradient(blue,cyan) ;
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+    font-size: 20px;
 }
